--- a/overlay/packages/apps/SimpleDeviceConfig/res/values/config.xml
+++ b/overlay/packages/apps/SimpleDeviceConfig/res/values/config.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2022 The Android Open Source Project
-
+<!-- Copyright (C) 2021 The Android Open Source Project
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
-
           http://www.apache.org/licenses/LICENSE-2.0
-
      Unless required by applicable law or agreed to in writing, software
      distributed under the License is distributed on an "AS IS" BASIS,
      WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -14,14 +11,12 @@
      limitations under the License.
 -->
 
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.android.settings.overlay.fleur"
-    android:versionCode="1"
-    android:versionName="1.0">
-    <application 
-      android:hasCode="false"/>
-    <overlay
-      android:targetPackage="com.android.settings"
-      android:isStatic="true"
-      android:priority="1"/>
-</manifest>
+<resources>
+    <string-array name="configs_base">
+        <!-- ART heap compaction for cached apps -->
+        <item>activity_manager/use_compaction=true</item>
+
+        <!-- Allow more cached apps in the background -->
+        <item>activity_manager/max_cached_processes=64</item>
+    </string-array>
+</resources>
