fleur: overlays: Enable doze mode
Attempt to fix AOD

--- a/rro_overlays/FrameworksResOverlayFleur/res/values/config.xml
+++ b/rro_overlays/FrameworksResOverlayFleur/res/values/config.xml
@@ -394,6 +394,9 @@
          The default is false. -->
     <bool name="config_lidControlsSleep">true</bool>
 
+    <!-- Enable doze mode -->
+    <bool name="doze_display_state_supported">true</bool>
+
     <!-- ComponentName of a dream to show whenever the system would otherwise have
          gone to sleep.  When the PowerManager is asked to go to sleep, it will instead
          try to start this dream if possible.  The dream should typically call startDozing()
