fleur: overlays: Enable doze mode
Former-commit-id: e89668dfa401ce9008a91f7a4de6f6cd43853e67

--- a/rro_overlays/SystemUIOverlayFleur/res/values/config.xml
+++ b/rro_overlays/SystemUIOverlayFleur/res/values/config.xml
@@ -21,9 +21,14 @@
      for different hardware and product builds.  Do not translate. -->
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+
+    <!-- Enable doze mode -->
+    <bool name="doze_display_state_supported">true</bool>
+
     <dimen name="rounded_corner_content_padding">52.0px</dimen>
     <dimen name="status_bar_padding_end">3.0px</dimen>
     <dimen name="status_bar_padding_start">3.0px</dimen>
     <dimen name="physical_fingerprint_sensor_center_screen_location_y">955px</dimen>
     <dimen name="physical_fingerprint_sensor_center_screen_location_x">1080px</dimen>
+
 </resources>
