fleur: overlay: Disable TTS force stop warning Change-Id: Ibdac4edb62b2d5ada0c13ddc7a417b455ef2acce
Former-commit-id: ef9f2ca717b90a0dd64c2753976817e268ee19ef

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -64,6 +64,10 @@
         <item>com.tencent.mm</item>
     </string-array>
 
+        <!-- List of comma separated package names for which we the system will not show crash like
+         tts, etc. dialogs. -->
+    <string name="config_appsNotReportingCrashes">com.google.android.tts</string>
+
     <!-- An array of arrays of side fingerprint sensor properties relative to each display.
          Note: this value is temporary and is expected to be queried directly
          from the HAL in the future. -->
