--- a/rro_overlays/FrameworksResOverlayFleur/res/values/config.xml
+++ b/rro_overlays/FrameworksResOverlayFleur/res/values/config.xml
@@ -726,4 +726,8 @@
 
     <!-- Whether to cancel fingerprint operation if not idle -->
     <bool name="config_fpCancelIfNotIdle">true</bool>
+
+    <!-- The max scale for the wallpaper when it's zoomed in -->
+    <item name="config_wallpaperMaxScale" format="float" type="dimen">1</item>
+
 </resources>
