fleur: overlay: Disable combined QS header Change-Id: Ib9871a0c4c5c3a26905ffc9aab9c98e1d343f002
Signed-off-by: ShazuxD <shazuxd7@gmail.com>

Former-commit-id: 0c29c92f6a1a935607400b0bdc10447460703286

--- a/rro_overlays/SystemUIOverlayFleur/res/values/config.xml
+++ b/rro_overlays/SystemUIOverlayFleur/res/values/config.xml
@@ -30,5 +30,7 @@
     <dimen name="status_bar_padding_start">3.0px</dimen>
     <dimen name="physical_fingerprint_sensor_center_screen_location_y">955px</dimen>
     <dimen name="physical_fingerprint_sensor_center_screen_location_x">1080px</dimen>
-
+    <!-- Whether the combined qs shows in status bar when true, the combined qs will not be available
+         if set it to false  -->
+    <bool name="flag_combined_qs_headers">false</bool>
 </resources>
