--- a/rro_overlays/FrameworksResOverlayFleur/res/values/config.xml
+++ b/rro_overlays/FrameworksResOverlayFleur/res/values/config.xml
@@ -726,4 +726,7 @@
 
     <!-- Whether to cancel fingerprint operation if not idle -->
     <bool name="config_fpCancelIfNotIdle">true</bool>
+
+    <!-- Determines whether the shell features all run on another thread. -->
+    <bool name="config_enableShellMainThread">true</bool>
 </resources>
