--- a/overlay/frameworks/base/packages/SettingsProvider/res/values/defaults.xml
+++ b/overlay/frameworks/base/packages/SettingsProvider/res/values/defaults.xml
@@ -21,8 +21,8 @@
     <!-- Disable bluetooth by default -->
     <bool name="def_bluetooth_on">false</bool>
     <!-- Default state of tap to wake -->
-    <bool name="def_double_tap_to_wake">false</bool>
+    <bool name="def_double_tap_to_wake">true</bool>
     <!-- Default setting for Settings.Global.MOBILE_DATA_ALWAYS_ON -->
-    <bool name="def_mobile_data_always_on">false</bool>
+    <bool name="def_mobile_data_always_on">true</bool>
 
 </resources>
