--- a/rro_overlays/FrameworksResOverlayFleur/res/xml/power_profile.xml
+++ b/rro_overlays/FrameworksResOverlayFleur/res/xml/power_profile.xml
@@ -1,117 +1,113 @@
 <?xml version="1.0" encoding="utf-8"?>
 <device name="Android">
     <item name="none">0</item>
-    <item name="screen.on.display0">100</item>
-    <item name="screen.full.display0">800</item>
-    <item name="bluetooth.active">29.17</item>
-    <item name="bluetooth.on">1.12</item>
-    <item name="wifi.on">0.51</item>
-    <item name="wifi.active">146.6</item>
-    <item name="wifi.scan">14.51</item>
-    <item name="audio">100.0</item>
-    <item name="video">150.0</item>
-    <item name="camera.flashlight">500</item>
-    <item name="camera.avg">600</item>
-    <item name="gps.on">10</item>
-    <item name="radio.active">60</item>
-    <item name="radio.scanning">3</item>
+    <item name="screen.on">126</item>
+    <item name="screen.full">80</item>
+    <item name="bluetooth.active">22.32</item>
+    <item name="bluetooth.on">0.85</item>
+    <item name="wifi.on">0.11</item>
+    <item name="wifi.active">23.66</item>
+    <item name="wifi.scan">1.37</item>
+    <item name="dsp.audio">29.4</item>
+    <item name="dsp.video">71.40</item>
+    <item name="camera.flashlight">166</item>
+    <item name="camera.avg">633.84</item>
+    <item name="gps.on">44.30</item>
+    <item name="radio.active">167</item>
+    <item name="radio.scanning">25.8</item>
     <array name="radio.on">
-        <value>6</value>
-        <value>5</value>
-        <value>4</value>
-        <value>3</value>
-        <value>3</value>
+        <value>7.68</value>
+        <value>7.68</value>
     </array>
+    <item name="modem.controller.idle">0</item>
+    <item name="modem.controller.rx">0</item>
+    <item name="modem.controller.tx">0</item>
+    <item name="modem.controller.voltage">0</item>
     <array name="cpu.clusters.cores">
         <value>6</value>
         <value>2</value>
     </array>
     <array name="cpu.core_speeds.cluster0">
         <value>500000</value>
-        <value>650000</value>
-        <value>703000</value>
-        <value>756000</value>
-        <value>862000</value>
-        <value>968000</value>
-        <value>1048000</value>
-        <value>1128000</value>
-        <value>1287000</value>
-        <value>1393000</value>
+        <value>774000</value>
+        <value>875000</value>
+        <value>975000</value>
+        <value>1075000</value>
+        <value>1175000</value>
+        <value>1275000</value>
+        <value>1375000</value>
         <value>1500000</value>
-        <value>1645000</value>
-        <value>1750000</value>
-        <value>1812000</value>
-        <value>1916000</value>
+        <value>1618000</value>
+        <value>1666000</value>
+        <value>1733000</value>
+        <value>1800000</value>
+        <value>1866000</value>
+        <value>1933000</value>
         <value>2000000</value>
     </array>
-    <array name="cpu.core_speeds.cluster1">
-        <value>725000</value>
-        <value>840000</value>
-        <value>898000</value>
-        <value>985000</value>
-        <value>1042000</value>
-        <value>1129000</value>
-        <value>1274000</value>
-        <value>1418000</value>
-        <value>1534000</value>
-        <value>1650000</value>
-        <value>1837000</value>
-        <value>1993000</value>
-        <value>2118000</value>
-        <value>2203000</value>
-        <value>2306000</value>
-        <value>2400000</value>
-    </array>
     <array name="cpu.core_power.cluster0">
-        <value>31.36</value>
-        <value>32.05</value>
-        <value>32.79</value>
-        <value>33.91</value>
-        <value>35.22</value>
-        <value>37.15</value>
-        <value>38.54</value>
-        <value>40.76</value>
-        <value>42.34</value>
-        <value>46.45</value>
-        <value>49.13</value>
-        <value>57.44</value>
-        <value>63.06</value>
-        <value>64.41</value>
-        <value>71.79</value>
-        <value>74.45</value>
+        <value>19.55</value>
+        <value>23.5</value>
+        <value>25</value>
+        <value>27.86</value>
+        <value>31.24</value>
+        <value>35.5</value>
+        <value>39.69</value>
+        <value>44.83</value>
+        <value>52.33</value>
+        <value>58.95</value>
+        <value>62.05</value>
+        <value>66.61</value>
+        <value>72.77</value>
+        <value>80.27</value>
+        <value>85.8</value>
+        <value>90.04</value>
+    </array>
+    <array name="cpu.core_speeds.cluster1">
+        <value>774000</value>
+        <value>835000</value>
+        <value>919000</value>
+        <value>1002000</value>
+        <value>1085000</value>
+        <value>1169000</value>
+        <value>1308000</value>
+        <value>1419000</value>
+        <value>1530000</value>
+        <value>1670000</value>
+        <value>1733000</value>
+        <value>1796000</value>
+        <value>1860000</value>
+        <value>1923000</value>
+        <value>1986000</value>
+        <value>2050000</value>
     </array>
     <array name="cpu.core_power.cluster1">
-        <value>56.51</value>
-        <value>62.61</value>
-        <value>65.88</value>
-        <value>70.45</value>
-        <value>74.86</value>
-        <value>79.92</value>
-        <value>89.89</value>
-        <value>101.45</value>
-        <value>111.93</value>
-        <value>122.69</value>
-        <value>132.58</value>
-        <value>153.86</value>
-        <value>165.07</value>
-        <value>173.14</value>
-        <value>189.07</value>
-        <value>212.36</value>
+        <value>56.85</value>
+        <value>61.38</value>
+        <value>70.65</value>
+        <value>79.53</value>
+        <value>91.11</value>
+        <value>105.19</value>
+        <value>130.33</value>
+        <value>152.46</value>
+        <value>177.39</value>
+        <value>209.73</value>
+        <value>233.56</value>
+        <value>247.53</value>
+        <value>269.61</value>
+        <value>291.52</value>
+        <value>307.98</value>
+        <value>324.33</value>
     </array>
-    <item name="cpu.idle">1.11</item>
-    <item name="cpu.suspend">5</item>
-    <item name="cpu.active">2.55</item>
-    <item name="cpu.cluster_power.cluster0">2.11</item>
-    <item name="cpu.cluster_power.cluster1">2.22</item>
+    <item name="cpu.idle">4.66</item>
     <array name="memory.bandwidths">
         <value>22.7</value>
     </array>
     <item name="battery.capacity">5000</item>
-    <item name="battery.typical">5000</item>
     <item name="wifi.controller.idle">0</item>
     <item name="wifi.controller.rx">0</item>
     <item name="wifi.controller.tx">0</item>
-    <array name="wifi.controller.tx_levels" />
+    <array name="wifi.controller.tx_levels"/>
     <item name="wifi.controller.voltage">0</item>
     <array name="wifi.batchedscan">
         <value>.0002</value>
@@ -120,20 +116,4 @@
         <value>.2</value>
         <value>2</value>
     </array>
-    <item name="modem.controller.sleep">0</item>
-    <item name="modem.controller.idle">0</item>
-    <item name="modem.controller.rx">0</item>
-    <array name="modem.controller.tx">
-        <value>0</value>
-        <value>0</value>
-        <value>0</value>
-        <value>0</value>
-        <value>0</value>
-    </array>
-    <item name="modem.controller.voltage">0</item>
-    <array name="gps.signalqualitybased">
-        <value>0</value>
-        <value>0</value>
-    </array>
-    <item name="gps.voltage">0</item>
 </device>
