fleur: rro_overlays: enable AOD and Status Bar brun in protection
Signed-off-by: ShazuxD <shazuxd@proton.me>

--- a/rro_overlays/SystemUIOverlayFleur/res/values/config.xml
+++ b/rro_overlays/SystemUIOverlayFleur/res/values/config.xml
@@ -30,5 +30,7 @@
     <dimen name="status_bar_padding_start">3.0px</dimen>
     <dimen name="physical_fingerprint_sensor_center_screen_location_y">955px</dimen>
     <dimen name="physical_fingerprint_sensor_center_screen_location_x">1080px</dimen>
-
+    <!-- Burn-in protection -->
+    <bool name="config_statusBarBurnInProtection">true</bool>
+    <integer name="config_shift_interval">40</integer>
 </resources>
