--- a/rro_overlays/SystemUIOverlayFleur/res/values/config.xml
+++ b/rro_overlays/SystemUIOverlayFleur/res/values/config.xml
@@ -30,5 +30,9 @@
     <dimen name="status_bar_padding_start">8.0px</dimen>
     <dimen name="physical_fingerprint_sensor_center_screen_location_y">955px</dimen>
     <dimen name="physical_fingerprint_sensor_center_screen_location_x">1080px</dimen>
-
+    
+    <!-- The battery current divider, some kernel report current value in mA other in µA.
+         Leave 1 if you have mA, put 1000 if you have µA-->
+    <integer name="config_battCurrentDivider" translatable="false">1</integer>
+   
 </resources>
