--- a/rro_overlays/FrameworksResOverlayFleur/res/values/config.xml
+++ b/rro_overlays/FrameworksResOverlayFleur/res/values/config.xml
@@ -318,6 +318,9 @@
     <!-- The restoring is handled by modem if it is true-->
     <bool translatable="false" name="skip_restoring_network_selection">true</bool>
 
+    <!-- Boost Framework -->
+    <bool name="config_supportsBoostFramework">true</bool>
+
     <!-- Set to true to add links to Cell Broadcast app from Settings and MMS app. -->
     <bool name="config_cellBroadcastAppLinks">true</bool>
 
