Fleur: rro_overlay: SystemUI: add overlays for ripple with face unlock
Signed-off-by: Rohit Tiwari <rohitttiwari52@gmail.com>

--- a/rro_overlays/SystemUIOverlayFleur/res/values/config.xml
+++ b/rro_overlays/SystemUIOverlayFleur/res/values/config.xml
@@ -36,4 +36,13 @@
     <!-- Update battery info every second when device is charging -->
     <bool name="config_alternateFastchargeInfoUpdate">true</bool>
    
+    <!-- packages to exclude from camera protection -->
+    <string translatable="false" name="config_cameraProtectionExcludedPackages">co.aospa.sense</string>
+
+    <!-- The properties of the face auth camera -->
+    <integer-array name="config_face_auth_props">
+        <item>540</item> <!-- sensorLocationX -->
+        <item>20</item>  <!-- sensorLocationY -->
+        <item>50</item>  <!-- sensorRadius -->
+    </integer-array>   
 </resources>
