--- a/rro_overlays/FleurSettingsProviderOverlay/res/values/config.xml
+++ b/rro_overlays/FleurSettingsProviderOverlay/res/values/config.xml
@@ -22,7 +22,7 @@
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <!-- Default for Settings.Global.DEVICE_NAME $1=MODEL-->
-    <string name="def_device_name_simple">Redmi Note 11S NFC</string>
+    <string name="def_device_name_simple">Infinix Note 10 Pro</string>
     <!-- Default access point SSID used for tethering -->
-    <string name="wifi_tether_configure_ssid_default" translatable="false">Redmi Note 11S NFC</string>
+    <string name="wifi_tether_configure_ssid_default" translatable="false">Infinix Note 10 Pro</string>
 </resources>
