fleur: add kernel prebuilt

--- a/overlay/packages/apps/Settings/res/values/derp_strings.xml
+++ b/overlay/packages/apps/Settings/res/values/derp_strings.xml
@@ -12,7 +12,7 @@
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
-    <string name="maintainer_name">Rohit Tiwari</string>
-    <string name="maintainer_telegram">https://telegram.me/RT1648</string>
+    <string name="maintainer_name">Eko Rudianto (xoo2001)</string>
+    <string name="maintainer_telegram">https://telegram.me/xoo2001</string>
 
 </resources>
